# doumouya-portfolio

./: .firebaserc  .gitignore  dark.project.json  design-handoff.md  firebase.json
.github/workflows/: firebase-hosting.yml
build-engine/: .gitignore  CLAUDE.md  Cargo.toml  README.md
build-engine/.claude/: case-first-reminder.txt  settings.json
build-engine/.claude/agents/: architect.md  coder.md  ops.md  reviewer.md  tester.md
build-engine/.claude/commands/: feature.md
build-engine/.github/workflows/: ci.yml
build-engine/crates/api/: Cargo.toml
build-engine/crates/api/src/: admin.rs  cases.rs  db.rs  error.rs  events.rs  id.rs  lib.rs  main.rs  reach.rs  runs.rs
build-engine/crates/api/tests/: admin_it.rs  cases_it.rs  rbac_it.rs  runs_it.rs
build-engine/crates/engine/: Cargo.toml
build-engine/crates/engine/src/: lib.rs
build-engine/crates/mcp/: Cargo.toml
build-engine/crates/mcp/src/: lib.rs  main.rs
build-engine/crates/mcp/tests/: mcp_it.rs
build-engine/docs/: DATA-MODEL.md
build-engine/docs/build-log/: entity-rbac.md
build-engine/docs/cases/: README.md
build-engine/docs/specs/: README.md  cases-backend.md
build-engine/docs/state/: README.md
build-engine/migrations/: 0001_init.sql  0002_seed.sql  README.md
build-engine/tools/: ci.sh  purity-check.sh
build-engine/tools/agent-refs-audit/: audit.js
build-engine/tools/ci-audit/: baseline.json  check.sh  ratchet.mjs
build-engine/tools/scrub-audit/: audit.js
build-engine/tools/todo-audit/: audit.js
cleaner/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
cleaner/tools/: build.sh  dev-server.mjs  seed-birama.sh
cleaner/web/: app.css  app.ts  engine.ts  index.html  ops.ts  service-birama.ts  service-local.ts  session.ts  store.ts
csv-workbench/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  rust-toolchain.toml  tsconfig.json
csv-workbench/.github/workflows/: ci.yml  deploy.yml
csv-workbench/crates/data/: Cargo.toml
csv-workbench/crates/data/src/: clean.rs  distinct.rs  dtype.rs  encoding.rs  error.rs  export.rs  filter.rs  group_by.rs  joins.rs  lib.rs  search.rs  sentinels.rs  sort.rs  sql.rs  stats.rs  structure.rs  view.rs  wasm.rs
csv-workbench/crates/data/src/parse/: mod.rs  sniff.rs
csv-workbench/crates/data/src/steps/: cells.rs  columns.rs  mod.rs  rows.rs  structure.rs  util.rs
csv-workbench/crates/data/tests/: dossier_smoke.rs
csv-workbench/crates/shared/: Cargo.toml
csv-workbench/crates/shared/src/: file.rs  filter.rs  lib.rs  query.rs  report.rs  sort.rs  step.rs
csv-workbench/tools/: build-wasm.sh  build.sh
csv-workbench/web/: app.css  app.js  app.ts  index.html  tokens.css
csv-workbench/web/wasm/: data.js
echarts-dashboard/: tsconfig.json
echarts-dashboard/tools/: build.sh
echarts-dashboard/web/: app.css  app.ts
numu-shell/: package-lock.json  package.json  tsconfig.json
numu-shell/tools/: build.sh
numu-shell/web/: app.css  app.js  app.ts  data.ts  index.html  qir.ts  shell.css  test.js  tokens.css  views.ts  worker.js
numu-shell/web/wasm/: data.js
portfolio/: README.md  index.html  manifest.webmanifest  service-worker.js  tsconfig.json
portfolio/apps/cleaner/: app.js  tokens.css
portfolio/apps/cleaner/engine/: worker.js
portfolio/apps/csv-workbench/: tokens.css  worker.js
portfolio/apps/echarts-dashboard/: index.html
portfolio/apps/rbac-explorer/: index.html
portfolio/src/: body.html  designer.ts  icons.ts  lab.ts  landing.css  landing.ts  prefs.ts
portfolio/src/posts/: immune-system.ts
portfolio/themes/: shine.project.json
portfolio/tools/: build.sh  stage.sh
rbac-explorer/: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  tsconfig.json
rbac-explorer/.github/workflows/: ci.yml
rbac-explorer/crates/core/: Cargo.toml
rbac-explorer/crates/core/src/: lib.rs
rbac-explorer/crates/wasm/: Cargo.toml
rbac-explorer/crates/wasm/src/: lib.rs
rbac-explorer/docs/: corporate-scenario.md  fe-brief.md  spec.md
rbac-explorer/tools/: build.sh
rbac-explorer/web/: app.css  app.ts  wasm.d.ts
web-kit/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json
web-kit/.github/workflows/: ci.yml
web-kit/src/: el.ts  index.ts  responsive.ts  showcase.ts  tokens.css
web-kit/src/components/: avatar.ts  badge.ts  button.ts  card.ts  chart.ts  checkbox.ts  code.ts  dialog.ts  emptyState.ts  icon.ts  iconButton.ts  input.ts  kindLabel.ts  select.ts  stat.ts  tabs.ts  toast.ts  toolbar.ts  tooltip.ts
web-kit/src/tokens/: base.css  charts.css  colors.css  elevation.css  responsive.css  spacing.css  typography.css
web-kit/tests/: responsive.test.mjs
