# Cargo workspace for the build-engine server.
# Members grow as crates are added: `engine` (pure logic) now; `api` (Axum + sqlx) and
# `mcp` (the tool surface) land in the next increments. Shared deps are declared once here
# so every crate pins the same versions.
[workspace]
resolver = "2"
members = ["crates/engine", "crates/api", "crates/mcp"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
