# csv-workbench — a pure-compute data engine that runs in the browser.
#   data   = pure compute (no io/http/threads/time) -> compiles to wasm32
#   shared = wire DTOs only (serde structs the engine + UI speak)
# The boundary is mechanical: CI runs `cargo build --target wasm32-unknown-unknown -p data`.
[workspace]
resolver = "2"
members = ["crates/data", "crates/shared"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chardetng = "0.1"
encoding_rs = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
csv = "1.3"
# Native polars carries defaults (fmt -> DataFrame Debug). The wasm32 build
# overrides this with default-features = false in crates/data/Cargo.toml to keep
# the fmt -> comfy-table -> crossterm terminal-IO chain off wasm.
polars = { version = "0.54", features = ["lazy", "csv", "strings", "dtype-full", "regex", "concat_str", "sql"] }
rust_xlsxwriter = "0.95"

# Polars-on-wasm fork: polars 0.54 made polars-async (tokio multi-thread + net ->
# mio) an unconditional dep of polars-core; this fork gates tokio off wasm and
# gives polars-async a bare current-thread runtime WITHOUT .enable_time() (which
# panics at build() on wasm). ~110 lines across 11 files; rebase-able per bump.
[patch.crates-io]
polars = { git = "https://github.com/doumouya/polars-rp", rev = "0bb178d6ea1239ba009ca69a569ea66871b8a328" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
