[package]
name = "api"
version.workspace = true
edition.workspace = true
description = "HTTP edge (Axum + sqlx + Postgres) over the pure workflow engine."

[dependencies]
engine = { path = "../engine" }
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
# Runtime (non-macro) sqlx: no DATABASE_URL needed at compile time, so CI stays hermetic.
sqlx = { version = "0.8", default-features = false, features = [
  "runtime-tokio", "tls-rustls", "postgres", "macros", "migrate", "json", "chrono",
] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
