[package]
name = "mcp"
version.workspace = true
edition.workspace = true
description = "Minimal MCP (stdio JSON-RPC) tool surface over the cases service."

[dependencies]
api = { path = "../api" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
